# Mario

./: .gitignore  CMakeLists.txt  imgui.ini  main.cpp  readme.md
Components/: AnimationState.cpp  AnimationState.h  Component.cpp  Component.h  GameCamera.cpp  GameCamera.h  GizmoSystem.cpp  GizmoSystem.h  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  Spritesheet.cpp  Spritesheet.h
Editor/: GameViewWindow.cpp  GameViewWindow.h  JimGui.cpp  JimGui.h
Observers/: Event.h  EventSystem.h  Observer.h
Renderer/: Framebuffer.cpp  Framebuffer.h  PickingTexture.cpp  PickingTexture.h  RenderBatch.cpp  RenderBatch.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
Scenes/: LevelEditorSceneInitializer.cpp  LevelEditorSceneInitializer.h  LevelSceneInitializer.cpp  LevelSceneInitializer.h  Scene.cpp  Scene.h  SceneInitializer.h
Util/: AssetPool.cpp  AssetPool.h  Maths.h  Serialization.cpp  Serialization.h
Windows/: Camera.h  Carmera.cpp  GameObject.cpp  GameObject.h  ImGuiLayer.cpp  ImGuiLayer.h  KeyListener.cpp  KeyListener.h  MouseListener.cpp  MouseListener.h  Transform.cpp  Transform.h  Window.cpp  Window.h
